--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : x86 Labs - Blog
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Pedro Lopes
+  email : pedro.secinfo@gmail.com
+  github : pedrox86lopes
+  twitter : x86_g
+  feedburner : fuckfuckfuck
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://pedrox86lopes.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
